--- a/index.html
+++ b/index.html
@@ -18,7 +18,33 @@
 </head>
 
 <body>
-    
+    <header>
+        <!-- logo -->
+        <div class="logo">FontIcons</div>
+        <!-- /logo -->
+        <!-- menu selettore -->
+        <div class="menu">
+            <h4>filtra per nome</h4>
+            <select name="type" id="typology">
+                <option value="all">All</option>
+                <option value="animal">Animal</option>
+                <option value="vegetable">Vegetable</option>
+                <option value="user">user</option>
+            </select>
+        </div>
+        <!-- /menu selettore -->
+    </header>
+    <main>
+        <div class="container-full">
+            <div class="row">
+                <!-- ELEMENTI GENERATI CON JS -->
+                <!-- <div class="cards">
+                    <i class="fab fa-affiliatetheme"></i>
+                    <span>moon</span>
+                </div> -->
+            </div>
+        </div>
+    </main>
 
 
     <!-- FILE JS -->
