--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             <h4>filtra per nome</h4>
             <select name="type" id="typology">
                 <option value="all">All</option>
-                <option value="animal">Animal</option>
-                <option value="vegetable">Vegetable</option>
-                <option value="user">user</option>
+                <!-- CATEGORIE AGGIUNTE CON JS -->
             </select>
         </div>
         <!-- /menu selettore -->
